Change interface. Add Favorite Form functionality.

--- a/AstroGuideApp.csproj
+++ b/AstroGuideApp.csproj
@@ -36,4 +36,13 @@
     <Folder Include="Properties\DataSources\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="images\icons8-favorite-16.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="images\icons8-filled-bookmark-ribbon-16.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
